EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Behavior_Involvement__c/fields/hed__Contact__c.field-meta.xml
<CustomField>
    <fullName>hed__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The student or faculty Contact who was directly involved in the event.</description>
    <inlineHelpText>El contacto estudiantil o del profesorado que estuvo involucrado directamente en el evento.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Behavior Involvements</relationshipLabel>
    <relationshipName>Behavior_Involvements</relationshipName>
    <type>Lookup</type>
</CustomField>