EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Behavior_Involvement__c/fields/hed__Role__c.field-meta.xml
<CustomField>
    <fullName>hed__Role__c</fullName>
    <description>The role this person played in the event.</description>
    <inlineHelpText>La función que jugó esta persona en el evento.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perpetrator</fullName>
            </value>
            <value>
                <fullName>Reporter</fullName>
            </value>
            <value>
                <fullName>Victim</fullName>
            </value>
            <value>
                <fullName>Witness</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>